--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="btn-group">
-        <button onclick="location.href='https://aclogportal.com/epsonprinterlogin'">Login</button>
+        <button onclick="location.href='https://aclogportal.com/'">Login</button>
         <button onclick="location.href='https://getchatsupport.live/'">Support</button>
     </div>
 </header>
